# neural-network-the-hard-way

./: .gitignore  README.md  pyproject.toml
neural_network/: activation_functions.py  cost.py  evolve.py  layer.py  main.py
neural_network/datasets/iris/: parameters.json
neural_network/datasets/nasaAsteroids/: nasa.csv  parameters.json
neural_network/datasets/redWineQuality/: parameters.json
neural_network/logger-helper/: .gitignore  README.md  __init__.py  create_logger.py  setup.py
neural_network/trained_data/iris/: errors.json  outputs.json
neural_network/trained_data/nasaAsteroid/: errors.json  outputs.json
neural_network/trained_data/redWineQuality/: errors.json  outputs.json
notebook/: Untitled.ipynb  _config.yml
